# QTToDoList

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
inc/: IOFunction.h  baseFunction.h  baseWidget.h
res/styleSheet/: widgetDefaultStyle.qss
src/: IOFuntion.cpp  baseWidget.cpp  main.cpp
